--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,5 @@ workflows:
   maven_test:
     jobs:
       - maven/test # checkout, build, test, and upload test results
+      - codecov/upload:
+          file: {{ coverage_report_filepath }}
